--- a/index.html
+++ b/index.html
@@ -155,25 +155,6 @@
                         </button>
                     </section>
                 </section>
-                <section class="left-section__contact">
-                    <h4 class="left-section__contact--connect">Connect With Us</h4>
-                    <p class="left-section__contact--more-info">
-                        For more information about our strategic programs, contact the ARDC team.
-                    </p>
-                    <form action="mailto:mara@marameodesign.com">
-                        <section class="left-section__contact__inputs">
-                            <section class="left-section__contact__inputs__user">
-                                <input class="left-section__contact__inputs--info" type="text" name="name" placeholder="Name">
-                                <input class="left-section__contact__inputs--info" type="email" name="email" placeholder="Email">
-                            </section>
-                            <input class="left-section__contact__inputs--comment" 
-                            type="text" name="comment" placeholder="Comment">
-                        </section>
-                        <button class="left-section__contact__btn 
-                        left-section__contact__btn--hover"
-                         type="submit">Submit</button>
-                    </form>
-                </section>
             </section>
             <!--=================== LEFT-SECTION-END ===================-->
 
@@ -262,6 +243,22 @@
             </aside>
             <!--=================== RIGHT-SECTION-END ===================-->
         </section>
+
+        <!--================== CONTACT-US-SECTION-START ==================-->        
+        <section class="contact">
+            <form class="contact__form-container" action="mailto: mara@marameodesign.com">
+                <h1 class="contact__form-container--title">CONNECT WITH US</h1>
+                <p class="contact__form-container--description">For more information about our strategic 
+                    programs, contact the ARDC team.</p>
+                <input type="text" name="fullname" placeholder="Name">
+                <input type="email" name="email" placeholder="Email">
+                <input type="text" name="subject" placeholder="Subject">
+                <textarea name="message" placeholder="Type Message" style="height:100px"></textarea>
+                <button class="contact__btn 
+                contact__btn--hover" type="submit">Submit</button>
+            </form>
+        </section>
+        <!--================== CONTACT-US-SECTION-END ==================-->     
 
         <!--================== FOOTER-SECTION-START ==================-->
         <footer class="footer">
