--- a/index.html
+++ b/index.html
@@ -266,8 +266,7 @@
                 <img class="footer__left--img" src="assets/img/image-3.png" alt="/">
             </figure>
             <article class="footer__right">
-                <h2 class="footer__right--title">Subscribe to the</h2>
-                <h2 class="footer__right--title">ARDC Connect Newsletter</h2>    
+                <h2 class="footer__right--title">Subscribe to the ARDC Connect Newsletter</h2> 
                 <p class="footer__right--description">
                     Stay up to date on digital research news, events, jobs, guides and more...
                 </p>
